employee and user

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source= DESKTOP-A1QLF0V;Initial Catalog=AuthDb;Integrated Security=True"
+        "DBConnection": "Data Source=DESKTOP-VGVICMM;Initial Catalog=JWTAuthentication;Integrated Security=True;TrustServerCertificate=true"
     },
         "JWT": {
             "ValidAudience": "User",
